testing/tests/ui/macro-super.stderr
error: the previous template error derives from
 --> tests/ui/macro-super.rs:4:12
  |
4 | #[template(source = "{%- macro super() -%}{%- endmacro -%}", ext = "html")]
  |            ^^^^^^
